--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mm-website",
+  "homepage": "http://adm.marek.media",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,11 +8,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-render-html": "^0.6.0",
+    "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "sass": "^1.44.0",
+    "serve": "^13.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
