--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mm-website",
-  "homepage": "http://adm.marek.media",
+  "homepage": "https://markdisaster.github.io/mm-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,6 +21,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
