--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "mm-website",
-  "homepage": "https://markdisaster.github.io/mm-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "firebase": "^9.6.8",
+    "firebase-tools": "^10.2.2",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,8 +22,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -45,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://adm.marek.media"
+  "proxy": "http://adm.marek.media"
 }
