--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.3",
     "sass": "^1.44.0",
     "serve": "^13.0.2",
+    "validator": "^13.7.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
