--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
+    "dotenv": "^16.0.0",
     "firebase": "^9.6.8",
     "firebase-tools": "^10.2.2",
     "gh-pages": "^3.2.3",
